--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ STRIPE_CHECKOUT_SESSION_SUCCESS_URL=https://authgear.com
 STRIPE_CHECKOUT_SESSION_CANCEL_URL=https://authgear.com
 STRIPE_CHECKOUT_SESSION_PRICE_ID=price_foobar
 STRIPE_WEBHOOK_SIGNING_SECRET=whsec_foobar
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USERNAME=username
+SMTP_PASSWORD=password
