Handle installation oneliner with /install/{license_key}

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ SMTP_USERNAME=username
 SMTP_PASSWORD=password
 SMTP_SENDER=user@example.com
 SENTRY_DSN=
+PUBLIC_URL_SCHEME=https
+AUTHGEAR_ONCE_BINARY_DOWNLOAD_URL_GO_TEMPLATE=https://authgear.com?uname_s={{ $.Uname_s }}&uname_m={{ $.Uname_m }}
