--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 STRIPE_SECRET_KEY=sk_test_foobar
-STRIPE_CHECKOUT_SESSION_SUCCESS_URL=https://authgear.com
-STRIPE_CHECKOUT_SESSION_CANCEL_URL=https://authgear.com
+STRIPE_CHECKOUT_SESSION_SUCCESS_URL=https://www.authgear.com/payment-confirmed
+STRIPE_CHECKOUT_SESSION_CANCEL_URL=https://www.authgear.com/payment-unsuccessful
 STRIPE_CHECKOUT_SESSION_PRICE_ID=price_foobar
 STRIPE_WEBHOOK_SIGNING_SECRET=whsec_foobar
 SMTP_HOST=smtp.example.com
