--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,9 @@ SMTP_SENDER=user@example.com
 SENTRY_DSN=
 PUBLIC_URL_SCHEME=https
 AUTHGEAR_ONCE_BINARY_DOWNLOAD_URL_GO_TEMPLATE='https://authgear.com?uname_s={{ $.Uname_s }}&uname_m={{ $.Uname_m }}'
+KEYGEN_ADMIN_TOKEN=
+KEYGEN_PRODUCT_ID=
+KEYGEN_POLICY_ID=
 
 ## These 3 variables are read by the image "postgres"
 POSTGRES_USER=authgearonce
