--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,31 @@ services:
     volumes:
     - redis:/data
 
+  keygen-web:
+    image: keygen/api:v1.4.0
+    command: "web"
+    ports:
+    - "3000:3000"
+    env_file:
+    - .env
+    volumes:
+    - keygen:/etc/keygen
+    depends_on:
+    - postgres
+    - redis
+
+  keygen-worker:
+    image: keygen/api:v1.4.0
+    command: "worker"
+    env_file:
+    - .env
+    volumes:
+    - keygen:/etc/keygen
+    depends_on:
+    - postgres
+    - redis
+
 volumes:
   postgres:
   redis:
+  keygen:
