--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,33 @@
-STRIPE_SECRET_KEY=sk_test_foobar
-STRIPE_CHECKOUT_SESSION_SUCCESS_URL=https://www.authgear.com/payment-confirmed
-STRIPE_CHECKOUT_SESSION_CANCEL_URL=https://www.authgear.com/payment-unsuccessful
-STRIPE_CHECKOUT_SESSION_PRICE_ID=price_foobar
-STRIPE_WEBHOOK_SIGNING_SECRET=whsec_foobar
+# Origins that are allowed to call the license server.
+AUTHGEAR_ONCE_CORS_ALLOWED_ORIGINS=
+
+# Sentry SDN.
+AUTHGEAR_ONCE_SENTRY_SDN=
+
+# Stripe related configurations. They should be self-explanatory.
+AUTHGEAR_ONCE_STRIPE_SECRET_KEY=sk_test_foobar
+AUTHGEAR_ONCE_STRIPE_CHECKOUT_SESSION_SUCCESS_URL=https://www.authgear.com/payment-confirmed
+AUTHGEAR_ONCE_STRIPE_CHECKOUT_SESSION_CANCEL_URL=https://www.authgear.com/payment-unsuccessful
+AUTHGEAR_ONCE_STRIPE_CHECKOUT_SESSION_PRICE_ID=price_foobar
+AUTHGEAR_ONCE_STRIPE_WEBHOOK_SIGNING_SECRET=whsec_foobar
+
+# SMTP related cnfigurations.
 SMTP_HOST=smtp.example.com
 SMTP_PORT=587
 SMTP_USERNAME=username
 SMTP_PASSWORD=password
 SMTP_SENDER=user@example.com
-SENTRY_DSN=
-PUBLIC_URL_SCHEME=https
+
+# The URL scheme to generate a public-facing URL.
+# When unset, the default is https.
+AUTHGEAR_ONCE_PUBLIC_URL_SCHEME=https
+
+# The Go template to generate an URL to download the authgear-once command.
+# The template is rendered with Uname_s and Uname_m.
 AUTHGEAR_ONCE_BINARY_DOWNLOAD_URL_GO_TEMPLATE='https://authgear.com?uname_s={{ $.Uname_s }}&uname_m={{ $.Uname_m }}'
-KEYGEN_ADMIN_TOKEN=
-KEYGEN_PRODUCT_ID=
-KEYGEN_POLICY_ID=
+AUTHGEAR_ONCE_KEYGEN_ADMIN_TOKEN=
+AUTHGEAR_ONCE_KEYGEN_PRODUCT_ID=
+AUTHGEAR_ONCE_KEYGEN_POLICY_ID=
 
 ## These 3 variables are read by the image "postgres"
 POSTGRES_USER=authgearonce
