Support specifying --image

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,10 @@ AUTHGEAR_ONCE_PUBLIC_URL_SCHEME=https
 
 # The Go template to generate an URL to download the authgear-once command.
 # The template is rendered with Uname_s and Uname_m.
-AUTHGEAR_ONCE_BINARY_DOWNLOAD_URL_GO_TEMPLATE='https://authgear.com?uname_s={{ $.Uname_s }}&uname_m={{ $.Uname_m }}'
+AUTHGEAR_ONCE_ONCE_COMMAND_DOWNLOAD_URL_GO_TEMPLATE='https://authgear.com?uname_s={{ $.Uname_s }}&uname_m={{ $.Uname_m }}'
+# Specify --image to the once command to override the image.
+# If not specified, no override is done.
+AUTHGEAR_ONCE_ONCE_COMMAND_IMAGE_OVERRIDE=
 AUTHGEAR_ONCE_KEYGEN_ENDPOINT=http://localhost:3000
 AUTHGEAR_ONCE_KEYGEN_ADMIN_TOKEN=
 AUTHGEAR_ONCE_KEYGEN_PRODUCT_ID=
