Fix typo in SMTP env vars

--- a/.env.example
+++ b/.env.example
@@ -12,11 +12,11 @@ AUTHGEAR_ONCE_STRIPE_CHECKOUT_SESSION_PRICE_ID=price_foobar
 AUTHGEAR_ONCE_STRIPE_WEBHOOK_SIGNING_SECRET=whsec_foobar
 
 # SMTP related cnfigurations.
-SMTP_HOST=smtp.example.com
-SMTP_PORT=587
-SMTP_USERNAME=username
-SMTP_PASSWORD=password
-SMTP_SENDER=user@example.com
+AUTHGEAR_ONCE_SMTP_HOST=smtp.example.com
+AUTHGEAR_ONCE_SMTP_PORT=587
+AUTHGEAR_ONCE_SMTP_USERNAME=username
+AUTHGEAR_ONCE_SMTP_PASSWORD=password
+AUTHGEAR_ONCE_SMTP_SENDER=user@example.com
 
 # The URL scheme to generate a public-facing URL.
 # When unset, the default is https.
