--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,6 +28,8 @@ jobs:
       working-directory: ./scripts/npm
     - run: make govulncheck
       if: ${{ !cancelled() }}
+    - run: make fmt
+      if: ${{ !cancelled() }}
     - run: make lint
       if: ${{ !cancelled() }}
     - run: make test
