Introduce AUTHGEAR_ONCE_STRIPE_CHECKOUT_SESSION_METADATA_MARKER_VALUE

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@ AUTHGEAR_ONCE_STRIPE_CHECKOUT_SESSION_CANCEL_URL=https://www.authgear.com/paymen
 AUTHGEAR_ONCE_STRIPE_CHECKOUT_SESSION_PRICE_ID=price_foobar
 AUTHGEAR_ONCE_STRIPE_WEBHOOK_SIGNING_SECRET=whsec_foobar
 
+# The value of a metadata attached to the created checkout session.
+# It is used to distinguish between other checkout sessions that ARE NOT created by this server.
+AUTHGEAR_ONCE_STRIPE_CHECKOUT_SESSION_METADATA_MARKER_VALUE=authgear-once-license-server-local
+
 # SMTP related cnfigurations.
 AUTHGEAR_ONCE_SMTP_HOST=smtp.example.com
 AUTHGEAR_ONCE_SMTP_PORT=587
